# A-World-of-Data

./: README.md  pyproject.toml
app/: index.html
app/css/: style.css
app/data/: child_mortality_rate.csv  child_mortality_trends.csv  life_expectancy_trends.csv  population_using_basic_sanitation.csv  removed_rows_log.md
app/data/2023/: population_using_basic_sanitation_2023.csv
app/js/: choroplethMap.js  helpers.js  histogram.js  interactions.js  main.js  scatterplot.js
datasets/: child_mortality_rate.csv
datasets/2023/: child_mortality_rate_2023.csv
prepro/: README.md  __init__.py  population_using_basic_sanitation.csv  pull_data.py  pyproject.toml
prepro/preprocessing_logs/: child_mortality_rate_and_population_using_basic_sanitation_removals_2026-02-20_01-21-54.md  child_mortality_rate_and_population_using_basic_sanitation_removals_2026-02-20_17-08-54.md
prepro/processed_csvs/: child_mortality_rate.csv  population_using_basic_sanitation.csv
prepro/scripts/: __init__.py  find_differences_in_names.py  intersect_of_datasets.py  join_datasets.py  pull_csv.py  pull_json.py  to_recent_year_only.py
prepro/unprocessed_csvs/: access_to_electricity.csv  child_mortality_rate.csv  life-expectancy.csv  population-using-at-least-basic-drinking-water.csv  population_using_basic_sanitation.csv
