[project]
name = "prepro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.1",
    "pycountry>=26.2.16",
    "requests>=2.32.5",
    "tabulate>=0.9.0",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["TD", "EM101", "T201", "D413"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
